edit problem with good on carrier

--- a/templates/mobile_main.html
+++ b/templates/mobile_main.html
@@ -13,7 +13,7 @@
     <script>
         function redirectTOPROD(path) {
 
-    var currentPath = 'http://127.0.0.1:8000'
+    var currentPath =  window.location.origin
 
     // Append "/contest" to the current path
     var newUrl = currentPath + '/carrier/product/' + path;
