--- a/static/information.css
+++ b/static/information.css
@@ -782,25 +782,23 @@ th {
 }
 
 td {
-    border: 1px solid #98A4A6;
     border-collapse: collapse;
-    border-left: 0;
-    border-right: 0;
     color: rgba(24, 32, 38, 1);
+    height: 10px;
+    padding: 10px;
+    white-space: nowrap;
     font-weight: normal;
     font-family: Montserrat, sans-serif;
+    border: 1px solid #98A4A6;
+    border-left: 0px;
+    border-right: 0px;
 }
 
-.din {
-    background: white;
+input {
+    margin-left: -5px;
+    margin-right: 5px;
+    width: 100%;
 }
-
-.don {
-    background-color: #F5FAFF;
-}
-
-
-
 
 
 
