--- a/static/History.css
+++ b/static/History.css
@@ -135,7 +135,6 @@ button:hover {
     height: 38px;
     margin-left: 30px;
     margin-top: 15px;
-    margin-right: -35px;
 }
 
 .box-text {
@@ -275,7 +274,7 @@ button:hover {
     float: right;
     border: 2px solid rgba(244, 244, 248, 1);
     border-radius: 10px;
-    margin-right: 145px;
+    margin-left: -145px;
     margin-top: -22px;
     padding: auto;
 }
@@ -307,7 +306,7 @@ button:hover {
     font-size: 15px;
     color: black;
     margin-left: -35px;
-    margin-bottom: -5px;
+    margin-top: 5px;
     font-weight: normal;
     padding-right: 0;
 }
