--- a/static/main_page.css
+++ b/static/main_page.css
@@ -147,7 +147,6 @@ button:hover {
     height: 38px;
     margin-left: 30px;
     margin-top: 15px;
-    margin-right: -35px;
 }
 
 .box-text {
@@ -191,7 +190,7 @@ label {
 label:before {
     content: " ";
     display: inline-block;
-    margin-right: 15px;
+    margin-left: -15px;
     position: relative;
     width: 30px;
     height: 30px;
@@ -554,7 +553,7 @@ input:checked + label:before {
 .label:before {
     content: " ";
     display: inline-block;
-    margin-right: 15px;
+    margin-left: -15px;
     position: relative;
     width: 25px;
     height: 25px;
@@ -663,7 +662,7 @@ button.rud {
     cursor: pointer;
     float: right;
     margin-top: -14%;
-    margin-right: 12.5%;
+    margin-left: -12.5%;
 }
 
 button.rud:hover {
@@ -680,7 +679,7 @@ button.rud:hover {
     cursor: pointer;
     float: right;
     margin-top: -14%;
-    margin-right: 12.5%;
+    margin-left: -12.5%;
 }
 
 .adres {
