--- a/static/send_courier.css
+++ b/static/send_courier.css
@@ -147,7 +147,6 @@ button:hover {
     height: 38px;
     margin-left: 30px;
     margin-top: 15px;
-    margin-right: -35px;
 }
 
 .box-text {
@@ -159,7 +158,7 @@ button:hover {
 }
 
 .button {
-    margin-bottom: 45px;
+    margin-top: -45px;
 }
 .check {
     margin-top: 80px;
@@ -189,7 +188,7 @@ button:hover {
 .lab:before {
     content: " ";
     display: inline-block;
-    margin-right: 15px;
+    margin-left: -15px;
     position: relative;
     width: 30px;
     height: 30px;
@@ -329,7 +328,7 @@ input:checked + .lab:before {
 }
 
 .butt-one {
-    margin-bottom: 4%;
+    margin-top: -4%;
 }
 
 .block {
@@ -399,7 +398,7 @@ input:checked + .lab:before {
     font-size: 15px;
     width: 735px;
     margin-left: 35px;
-    margin-right: 165px;
+    margin-left: -165px;
     font-weight: normal;
 }
 
@@ -408,7 +407,7 @@ input:checked + .lab:before {
     font-family: Montserrat, sans-serif;
     font-size: 15px;
     width: 735px;
-    margin-right: 90px;
+    margin-left: -90px;
     font-weight: normal;
 }
 
@@ -417,7 +416,7 @@ input:checked + .lab:before {
     font-family: Montserrat, sans-serif;
     font-size: 15px;
     width: 735px;
-    margin-right: 25px;
+    margin-left: -25px;
     font-weight: normal;
 }
 
@@ -426,7 +425,7 @@ input:checked + .lab:before {
     font-family: Montserrat, sans-serif;
     font-size: 15px;
     width: 735px;
-    margin-right: 55px;
+    margin-left: -55px;
     font-weight: normal;
 }
 
@@ -590,7 +589,7 @@ input:checked + .lab:before {
 .lol:before {
   content: " ";
   display: inline-block;
-  margin-right: 10px;
+  margin-left: -10px;
   position: sticky;
   width: 20px;
   height: 20px;
@@ -613,7 +612,7 @@ input:checked + .lol:before {
 .block-new {
   background-color: white;
   width: 1050px;
-height: 50px;
+  height: 50px;
   margin-left: 3.8%;
   color: rgba(244, 244, 248, 1);
   border: 2px solid rgba(244, 244, 248, 1);
@@ -622,7 +621,7 @@ height: 50px;
   align-items: center;
   padding: 1px;
   padding-left: 30px;
-  margin-bottom: 15px;
+  margin-top: -15px;
 }
 
 /*.block-new {*/
@@ -647,7 +646,7 @@ height: 50px;
   align-items: center;
   padding: 1px;
   padding-left: 30px;
-  margin-bottom: 15px;
+  margin-top: -15px;
 }
 
 .column {
