--- a/static/History.css
+++ b/static/History.css
@@ -61,7 +61,7 @@ h1 {
     color: white;
     font-family: Montserrat, sans-serif;
     font-size: 50px;
-    font-weight: bold;
+    font-weight: normal;
 }
 
 .text {
@@ -306,7 +306,7 @@ button:hover {
     font-size: 15px;
     color: black;
     margin-left: -35px;
-    margin-top: 5px;
+    margin-top: -5px;
     font-weight: normal;
     padding-right: 0;
 }
