--- a/static/send_courier.css
+++ b/static/send_courier.css
@@ -63,7 +63,7 @@ h1 {
     color: white;
     font-family: Montserrat, sans-serif;
     font-size: 50px;
-    font-weight: bolder;
+    font-weight: normaler;
 }
 
 .text {
@@ -147,6 +147,7 @@ button:hover {
     height: 38px;
     margin-left: 30px;
     margin-top: 15px;
+    margin-right: -35px;
 }
 
 .box-text {
@@ -158,7 +159,7 @@ button:hover {
 }
 
 .button {
-    margin-top: -45px;
+    margin-bottom: 45px;
 }
 .check {
     margin-top: 80px;
@@ -188,7 +189,7 @@ button:hover {
 .lab:before {
     content: " ";
     display: inline-block;
-    margin-left: -15px;
+    margin-right: 15px;
     position: relative;
     width: 30px;
     height: 30px;
@@ -284,7 +285,7 @@ input:checked + .lab:before {
     font-family: Montserrat, sans-serif;
     font-size: 25px;
     width: 800px;
-    font-weight: bold;
+    font-weight: normal;
     margin-left: 52px;
     margin-top: 60px;
 }
@@ -294,7 +295,7 @@ input:checked + .lab:before {
     font-family: Montserrat, sans-serif;
     font-size: 25px;
     width: 800px;
-    font-weight: bold;
+    font-weight: normal;
     margin-left: 0;
 }
 
@@ -328,7 +329,7 @@ input:checked + .lab:before {
 }
 
 .butt-one {
-    margin-top: -4%;
+    margin-bottom: 4%;
 }
 
 .block {
@@ -398,7 +399,7 @@ input:checked + .lab:before {
     font-size: 15px;
     width: 735px;
     margin-left: 35px;
-    margin-left: -165px;
+    margin-right: 165px;
     font-weight: normal;
 }
 
@@ -407,7 +408,7 @@ input:checked + .lab:before {
     font-family: Montserrat, sans-serif;
     font-size: 15px;
     width: 735px;
-    margin-left: -90px;
+    margin-right: 90px;
     font-weight: normal;
 }
 
@@ -416,7 +417,7 @@ input:checked + .lab:before {
     font-family: Montserrat, sans-serif;
     font-size: 15px;
     width: 735px;
-    margin-left: -25px;
+    margin-right: 25px;
     font-weight: normal;
 }
 
@@ -425,7 +426,7 @@ input:checked + .lab:before {
     font-family: Montserrat, sans-serif;
     font-size: 15px;
     width: 735px;
-    margin-left: -55px;
+    margin-right: 55px;
     font-weight: normal;
 }
 
@@ -589,7 +590,7 @@ input:checked + .lab:before {
 .lol:before {
   content: " ";
   display: inline-block;
-  margin-left: -10px;
+  margin-right: 10px;
   position: sticky;
   width: 20px;
   height: 20px;
@@ -612,7 +613,7 @@ input:checked + .lol:before {
 .block-new {
   background-color: white;
   width: 1050px;
-  height: 50px;
+height: 50px;
   margin-left: 3.8%;
   color: rgba(244, 244, 248, 1);
   border: 2px solid rgba(244, 244, 248, 1);
@@ -621,7 +622,7 @@ input:checked + .lol:before {
   align-items: center;
   padding: 1px;
   padding-left: 30px;
-  margin-top: -15px;
+  margin-bottom: 15px;
 }
 
 /*.block-new {*/
@@ -646,7 +647,7 @@ input:checked + .lol:before {
   align-items: center;
   padding: 1px;
   padding-left: 30px;
-  margin-top: -15px;
+  margin-bottom: 15px;
 }
 
 .column {
